Added RTTY and associated test

--- a/lpc-src/test/Makefile
+++ b/lpc-src/test/Makefile
@@ -30,7 +30,10 @@
 #
 CFLAGS	= $(FLAGS) -Wall -Wextra -std=gnu99 -ffunction-sections -fdata-sections
 
-all: square-test
+all: square-test rtty-test
 
 square-test: ../src/square.c
 	$(CC) $(CFLAGS) -D SQUARE_TEST $(addprefix -I ../,$(INCLUDES)) -o $@ $<
+
+rtty-test: ../src/rtty.c
+	$(CC) $(CFLAGS) -D RTTY_TEST $(addprefix -I ../,$(INCLUDES)) -o $@ $<
