--- a/lpc-src/makefile.conf
+++ b/lpc-src/makefile.conf
@@ -20,7 +20,7 @@
 # OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 # WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-PROJECT_NAME  := lpc1114
+PROJECT_NAME  := buseds-hab
 CHIP	      := LPC1114/302
 
 # Memory Sizes - Only used for information
