Removed libc from linker flags, seems to cause hardfault. TODO: investiagte

--- a/lpc-src/makefile.conf
+++ b/lpc-src/makefile.conf
@@ -41,7 +41,8 @@ INCLUDES      := inc chip chip/cortex-m
 LINKERS	      := chip/mem.ld chip/sections.ld
 
 # Linker Flags
-LINKER_FLAGS  := --specs=nano.specs --specs=rdimon.specs -lc -lc -lrdimon -Wl,--gc-sections
+LINKER_FLAGS  := -lc -lc -Wl,--gc-sections
+#-lc -lnosys -Wl,--gc-sections
 
 # Debug Driver options
 #
