Made basic updates for the new board

--- a/lpc-src/makefile.conf
+++ b/lpc-src/makefile.conf
@@ -21,11 +21,11 @@
 # WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 PROJECT_NAME  := buseds-hab
-CHIP	      := LPC1114/302
+CHIP	      := LPC1115/303
 
 # Memory Sizes - Only used for information
-# LPC1114
-ROM_SIZE      := 32K
+# LPC1115/303
+ROM_SIZE      := 64K
 RAM_SIZE      := 8K
 
 # Compiliation Flags
