Added UKHAS protocol and tests

--- a/lpc-src/test/Makefile
+++ b/lpc-src/test/Makefile
@@ -30,7 +30,7 @@
 #
 CFLAGS	= $(FLAGS) -g3 -ggdb -Wall -Wextra -std=gnu99 -ffunction-sections -fdata-sections
 
-all: square-test rtty-test gps-test tmp102-test altitude-test
+all: square-test rtty-test gps-test tmp102-test altitude-test protocol-test
 
 square-test: ../src/square.c
 	$(CC) $(CFLAGS) -D SQUARE_TEST $(addprefix -I ../,$(INCLUDES)) -o $@ $<
@@ -40,6 +40,9 @@ rtty-test: ../src/rtty.c
 
 gps-test: ../src/gps.c
 	$(CC) $(CFLAGS) -D GPS_TEST $(addprefix -I ../,$(INCLUDES)) -o $@ $< -lm
+
+protocol-test: ../src/protocol.c
+	$(CC) $(CFLAGS) -D PROTOCOL_TEST $(addprefix -I ../,$(INCLUDES)) -o $@ $<
 
 tmp102-test: ../src/tmp102.c ../src/i2c.c
 	$(CC) $(CFLAGS) -D TMP102_TEST $(addprefix -I ../,$(INCLUDES)) -o $@ $< ../src/i2c.c
